--- a/index.html
+++ b/index.html
@@ -23,41 +23,7 @@
   <div class="container">
       <div class="col-xs-3" >
 
-          <div class="row" id="RowA">
-              <div class="col-xs-1 ss" id="17"></div>
-              <div class="col-xs-1 ss" id="18"></div>
-              <div class="col-xs-1 ss" id="19"></div>
-          </div>
-
-          <div class="row">
-              <div class="col-xs-1 col-sm-1 col-lg-1 ss" id="20"></div>
-              <div class="col-xs-1 ss" id="21"></div>
-              <div class="col-xs-1 ss" id="22"></div>
-          </div>
-
-          <div class="row">
-              <div class="col-xs-1  ss" id="23"></div>
-              <div class="col-xs-1 ss" id="24"></div>
-              <div class="col-xs-1 ss" id="25"></div>
-          </div>
-
-          <div class="row">
-              <div class="col-xs-1  ss" id="26"></div>
-              <div class="col-xs-1  ss" id="27"></div>
-              <div class="col-xs-1  ss" id="28"></div>
-          </div>
-
-          <div class="row">
-              <div class="col-xs-1  ss" id="29"></div>
-              <div class="col-xs-1  ss" id="30"></div>
-              <div class="col-xs-1  ss" id="31"></div>
-          </div>
-
-
-          <div class="row">
-              <div class="col-xs-1  ss" id="32"></div>
-
-          </div>
+         
       </div>
 
 
@@ -78,12 +44,12 @@
          <div class="row" id="row1">
              <div class="col-xs-1" style="text-align: center; color: red; font-size: medium; font-weight: bold"><span>1</span></div>
              <div class="col-xs-1 col" id="A1" style="background-color: white"><img src="Images/blackRook.png" class="img area Black Rook" id="ch1"></div>
-             <div class="col-xs-1 col" id="B1" style="background-color: black"><img src="Images/blackKnight.png" class="img area Black Knight" id="ch2"></div>
+             <div class="col-xs-1 col" id="B1" style="background-color: black"><img src="Images/blackKingt.png" class="img area Black Knight" id="ch2"></div>
              <div class="col-xs-1 col" id="C1" style="background-color: white"><img src="Images/blackBishop.png" class="img area Black Bishop" id="ch3"></div>
              <div class="col-xs-1 col" id="D1" style="background-color: black"><img src="Images/blackQueen.png" class="img area Black Queen" id="ch4"></div>
              <div class="col-xs-1 col" id="E1" style="background-color: white"><img src="Images/blackKing.png" class="img area Black King" id="ch5"></div>
              <div class="col-xs-1 col" id="F1" style="background-color: black"><img src="Images/blackBishop.png" class="img area Black Bishop" id="ch6"></div>
-             <div class="col-xs-1 col" id="G1" style="background-color: white"><img src="Images/blackKnight.png" class="img area Black Knight" id="ch7"></div>
+             <div class="col-xs-1 col" id="G1" style="background-color: white"><img src="Images/blackKingt.png" class="img area Black Knight" id="ch7"></div>
              <div class="col-xs-1 col" id="H1" style="background-color: black"><img src="Images/blackRook.png" class="img area Black Rook" id="im8"></div>
              <div class="col-xs-1" style="text-align: center; color: red; font-size: medium; font-weight: bold"><span>1</span></div>
 
@@ -214,39 +180,6 @@
       </div>
 
 
-        <div class="row" id="RowB">
-            <div class="col-xs-1 ss" id="1"></div>
-            <div class="col-xs-1 ss" id="2"></div>
-            <div class="col-xs-1 ss" id="3"></div>
-        </div>
-
-        <div class="row">
-            <div class="col-xs-1 ss" id="4"></div>
-            <div class="col-xs-1 ss" id="5"></div>
-            <div class="col-xs-1 ss" id="6"></div>
-        </div>
-
-        <div class="row">
-            <div class="col-xs-1 ss" id="7"></div>
-            <div class="col-xs-1 ss" id="8"></div>
-            <div class="col-xs-1 ss" id="9"></div>
-        </div>
-
-        <div class="row">
-            <div class="col-xs-1 ss" id="10"></div>
-            <div class="col-xs-1 ss" id="11"></div>
-            <div class="col-xs-1 ss" id="12"></div>
-        </div>
-
-        <div class="row">
-            <div class="col-xs-1 ss" id="13"></div>
-            <div class="col-xs-1 ss" id="14"></div>
-            <div class="col-xs-1 ss" id="15"></div>
-        </div>
-
-        <div class="row">
-            <div class="col-xs-1 ss" id="16"></div>
-        </div>
     </div>
   </div>
   </div>
