--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
   <div class="container">
       <div class="col-xs-3" >
 
-         
+
       </div>
 
 
@@ -44,12 +44,12 @@
          <div class="row" id="row1">
              <div class="col-xs-1" style="text-align: center; color: red; font-size: medium; font-weight: bold"><span>1</span></div>
              <div class="col-xs-1 col" id="A1" style="background-color: white"><img src="Images/blackRook.png" class="img area Black Rook" id="ch1"></div>
-             <div class="col-xs-1 col" id="B1" style="background-color: black"><img src="Images/blackKingt.png" class="img area Black Knight" id="ch2"></div>
+             <div class="col-xs-1 col" id="B1" style="background-color: black"><img src="Images/bk.png" class="img area Black Knight" id="ch2"></div>
              <div class="col-xs-1 col" id="C1" style="background-color: white"><img src="Images/blackBishop.png" class="img area Black Bishop" id="ch3"></div>
              <div class="col-xs-1 col" id="D1" style="background-color: black"><img src="Images/blackQueen.png" class="img area Black Queen" id="ch4"></div>
-             <div class="col-xs-1 col" id="E1" style="background-color: white"><img src="Images/blackKing.png" class="img area Black King" id="ch5"></div>
+             <div class="col-xs-1 col" id="E1" style="background-color: white"><img src="Images/bk.png" class="img area Black King" id="ch5"></div>
              <div class="col-xs-1 col" id="F1" style="background-color: black"><img src="Images/blackBishop.png" class="img area Black Bishop" id="ch6"></div>
-             <div class="col-xs-1 col" id="G1" style="background-color: white"><img src="Images/blackKingt.png" class="img area Black Knight" id="ch7"></div>
+             <div class="col-xs-1 col" id="G1" style="background-color: white"><img src="Images/bk.png" class="img area Black Knight" id="ch7"></div>
              <div class="col-xs-1 col" id="H1" style="background-color: black"><img src="Images/blackRook.png" class="img area Black Rook" id="im8"></div>
              <div class="col-xs-1" style="text-align: center; color: red; font-size: medium; font-weight: bold"><span>1</span></div>
 
